--- a/templates/addplayers.html
+++ b/templates/addplayers.html
@@ -116,7 +116,7 @@
   </div>
 
   <!-- View Tabs -->
-  <ul class="nav nav-tabs mb-3" id="viewTabs" role="tablist">
+  <ul class="nav nav-tabs mb-2" id="viewTabs" role="tablist">
     <li class="nav-item" role="presentation">
       <button class="nav-link active" id="card-tab" data-bs-toggle="tab" data-bs-target="#cardView" type="button" role="tab">Card View</button>
     </li>
@@ -125,6 +125,15 @@
     </li>
   </ul>
 
+  <!-- 🔁 Generate Teams Button -->
+  <div class="mb-3 text-end">
+    <form action="/generateTeams" method="post" class="d-inline-block">
+      <input type="hidden" name="matchid" value="{{matchid}}">
+      <button type="submit" class="btn btn-primary">⚙️ Generate Teams</button>
+    </form>
+  </div>
+
+  <!-- Tab Content -->
   <div class="tab-content" id="viewTabsContent">
     <!-- Card View -->
     <div class="tab-pane fade show active" id="cardView" role="tabpanel">
